Update JQuery. Add Bootstrap. Add Autofac. Fixed reference to database. Remove database from Git.  Fixed css paths. Renamed layout. Added additional layot(for tests)

--- a/MyDeck.Web/Views/Account/Login.cshtml
+++ b/MyDeck.Web/Views/Account/Login.cshtml
@@ -2,8 +2,8 @@
 
 @{
     ViewBag.Title = "Log in";
+    Layout = "~/Views/Shared/Layout2.cshtml";
 }
-
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
